tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_errors_if_multiple_trait_methods_are_in_scope_for_method_call/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Multiple applicable items in scope
  ┌─ src/main.nr:7:17
  │
7 │         let _ = bar.foo();
  │                 --------- All these trait which provide `foo` are implemented and in scope: `private_mod::Foo2`, `private_mod::Foo`
  │

Aborting due to 1 previous error
